--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
   },
   "homepage": "https://github.com/samtheprogram/mongoose-controller#readme",
   "dependencies": {
-    "lodash.pick": "~4.4",
+    "lodash.pick": "~4.4"
+  },
+  "devDependencies": {
     "mocha": "~3.5",
-    "mongoose": "~4.7.0"
+    "mongoose": "~4.7"
+  },
+  "peerDependencies": {
+    "mongoose": "^4.7.0"
   }
 }
