--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha test",
-    "prettier": "prettier --config ./.prettierrc.js --write ./"
+    "lint": "./node_modules/eslint/bin/eslint.js --config ./.eslintrc.js --fix ./"
   },
   "repository": {
     "type": "git",
@@ -27,9 +27,10 @@
     "lodash.pick": "~4.4"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-mocha": "^7.0.0",
     "mocha": "~3.5",
-    "mongoose": "~4.7",
-    "prettier": "^2.0.5"
+    "mongoose": "~4.7"
   },
   "peerDependencies": {
     "mongoose": "^4.7.0"
