--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   },
   "peerDependencies": {
     "mongoose": "^4.7.0"
+  },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.14.4"
   }
 }
