--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "eslint-plugin-editorconfig": "^2.1.2",
     "eslint-plugin-mocha": "^7.0.0",
     "mocha": "~3.5",
-    "mongoose": "~4.7"
+    "mongoose": "4.13.8"
   },
   "peerDependencies": {
-    "mongoose": "^4.7.0"
+    "mongoose": "4.13.8"
   },
   "engines": {
     "node": ">=10.0.0",
