--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,7 @@ max_line_length = 80
 [*.{js,json}]
 indent_size = 2
 insert_final_newline = true
+max_line_length = 100
 trim_trailing_whitespace = true
+
 
