--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "check": "npm run lint && npm run test",
     "test": "./node_modules/mocha/bin/mocha test",
     "lint": "./node_modules/eslint/bin/eslint.js --config ./.eslintrc.js --fix ./"
   },
@@ -30,6 +31,7 @@
     "eslint": "~7.1",
     "eslint-plugin-editorconfig": "^2.1.2",
     "eslint-plugin-mocha": "^7.0.0",
+    "husky": "^4.2.5",
     "mocha": "~7.2",
     "mongoose": "4.13.20"
   },
@@ -37,7 +39,13 @@
     "mongoose": "4.13.20"
   },
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.14.4"
+    "node": ">=8.0.0",
+    "npm": ">=6.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run check",
+      "pre-push": "npm run check"
+    }
   }
 }
